Wed Jun 12 2019
1. Bug fixing
   * Allow "Intercept" to be used in prior specification if the formula contains "1"
   * Corrected level number in rp<level> part of informative prior specification for multivariate/multinomial models
   * Added further checks when interpreting the user-supplied informative prior specification
   * Fix some cases where informative priors could not be applied to multinomial and mixed response models

2. Changes
   * Recent versions of MLwiN work in double precision, so remove precision reduction in examples
   * Avoid parsing the formula a second time when applying priors to a model

Tue Jun 11 2019
1. Bug fixing
   * Allow non-alphanumeric characters (such as ".") in response variable names for non-normal models
   * Do not replace "." with "_" within variable names used to generate parameter labels
   * Update documentation for MCMC information prior specification

Tue Jun 04 2019
1. Bug fixing
   * Correct options for running via WinBUGS (as an alternative to OpenBUGS)
   * BRugs does not provide a way to specify the OpenBUGS path, so update options to reflect this

Mon May 20 2019
1. Changes
   * Replace calls to rbugs with R2WinBUGS
   * Give warning if a necessary package is not installed for a demo, instead of automatically installing it

Tue Feb 12 2019
1. Changes
   * Make the rbugs package dependency optional

Mon Feb 11 2019
1. Changes
   * Increase minimum suggested version of MLwiN to 2.36

Fri Feb 08 2019
1. Bug fixing
   * Warn the user if an expected column is not present in the data
   * Correct documentation of smat to indicate that is should be a 2xN matrix instead of Nx2

2. Changes
   * Display citation information directly instead of capturing the print output
   * Specify UTF-8 encoding in the DESCRIPTION file.

Fri Apr 20 2018
1. Bug fixing
   * Correct stored hierarchy information when units IDs do not have unique values across higher levels

Wed Feb 14 2017
1. Bug fixing